<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.icon256bliss.android.coursehandler.OlevelSelector">

    <ScrollView
        android:id="@+id/oscrollableContents"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="16dp" >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/political"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/political"
                android:theme="@style/MyCheckBox"/>

            <CheckBox
                android:id="@+id/fineart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fineart"
                android:theme="@style/MyCheckBox"/>

            <CheckBox
                android:id="@+id/Homeeconomics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Homeeconomics"
                android:theme="@style/MyCheckBox"/>

            <CheckBox
                android:id="@+id/cre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cre"
                android:theme="@style/MyCheckBox"/>

            <CheckBox
                android:id="@+id/computer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/computer"
                android:theme="@style/MyCheckBox"/>

            <CheckBox
                android:id="@+id/literature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/literature"
                android:theme="@style/MyCheckBox"/>


            <CheckBox
                android:id="@+id/addmath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addmath"
                android:theme="@style/MyCheckBox"/>

            <CheckBox
                android:id="@+id/agriculture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agriculture"
                android:theme="@style/MyCheckBox"/>

            <CheckBox
                android:id="@+id/kiswahili"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kiswahili"
                android:theme="@style/MyCheckBox"/>

            <CheckBox
                android:id="@+id/tdrawing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tdrawing"
                android:theme="@style/MyCheckBox"/>

            <CheckBox
                android:id="@+id/french"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/french"
                android:theme="@style/MyCheckBox"/>

            <CheckBox
                android:id="@+id/metalwork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/metalwork"
                android:theme="@style/MyCheckBox"/>

            <CheckBox
                android:id="@+id/luganda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/luganda"
                android:theme="@style/MyCheckBox"/>

            <CheckBox
                android:id="@+id/latin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latin"
                android:theme="@style/MyCheckBox"/>

            <CheckBox
                android:id="@+id/arabic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arabic"
                android:theme="@style/MyCheckBox"/>

            <CheckBox
                android:id="@+id/music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music"
                android:theme="@style/MyCheckBox"/>

            <CheckBox
                android:id="@+id/germany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/germany"
                android:theme="@style/MyCheckBox"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>