<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.icon256bliss.android.coursehandler.AlevelSelector"
    android:padding="16dp">

    <TextView
        android:id="@+id/subs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Subsidiary"
        android:textColor="@color/accent"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <RelativeLayout
        android:id="@+id/selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="16dp">

        <CheckBox
            android:id="@+id/computer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/computer"
            android:theme="@style/MyCheckBox" />

        <CheckBox
            android:id="@+id/submath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/computer"
            android:text="@string/submath"
            android:theme="@style/MyCheckBox" />
    </RelativeLayout>


    <TextView
        android:id="@+id/sep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Majors"
        android:textColor="@color/accent"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <ScrollView
        android:id="@+id/oscrollableContents"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/sep">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/left"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/chkIos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:text="@string/math"
                    android:theme="@style/MyCheckBox" />

                <CheckBox
                    android:id="@+id/chkAndroid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/physics"
                    android:theme="@style/MyCheckBox" />

                <CheckBox
                    android:id="@+id/chemistry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chemistry"
                    android:theme="@style/MyCheckBox" />

                <CheckBox
                    android:id="@+id/fineart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fineart"
                    android:theme="@style/MyCheckBox" />

                <CheckBox
                    android:id="@+id/agriculture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agriculture"
                    android:theme="@style/MyCheckBox" />

                <CheckBox
                    android:id="@+id/kiswahili"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kiswahili"
                    android:theme="@style/MyCheckBox" />

                <CheckBox
                    android:id="@+id/tdrawing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tdrawing"
                    android:theme="@style/MyCheckBox" />

                <CheckBox
                    android:id="@+id/luganda"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/luganda"
                    android:theme="@style/MyCheckBox" />

                <CheckBox
                    android:id="@+id/latin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latin"
                    android:theme="@style/MyCheckBox" />

                <CheckBox
                    android:id="@+id/arabic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/arabic"
                    android:theme="@style/MyCheckBox" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="165dp"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/biology"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/biology"
                    android:theme="@style/MyCheckBox" />

                <CheckBox
                    android:id="@+id/history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/history"
                    android:theme="@style/MyCheckBox" />

                <CheckBox
                    android:id="@+id/geography"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/geography"
                    android:theme="@style/MyCheckBox" />

                <CheckBox
                    android:id="@+id/economics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/economics"
                    android:theme="@style/MyCheckBox" />

                <CheckBox
                    android:id="@+id/literature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/literature"
                    android:theme="@style/MyCheckBox" />

                <CheckBox
                    android:id="@+id/french"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/french"
                    android:theme="@style/MyCheckBox" />

                <CheckBox
                    android:id="@+id/metalwork"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/metalwork"
                    android:theme="@style/MyCheckBox" />

                <CheckBox
                    android:id="@+id/music"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/music"
                    android:theme="@style/MyCheckBox" />

                <CheckBox
                    android:id="@+id/germany"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/germany"
                    android:theme="@style/MyCheckBox" />

            </LinearLayout>


            <CheckBox
                android:id="@+id/foodandnutrition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/left"
                android:text="@string/foodandnutrition"
                android:theme="@style/MyCheckBox" />

            <CheckBox
                android:id="@+id/cre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/foodandnutrition"
                android:text="@string/cre"
                android:theme="@style/MyCheckBox" />
        </RelativeLayout>
    </ScrollView>

</LinearLayout>